Added search functionality

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -20,7 +20,7 @@
 <tr>
 <td class="volume-icon"><img class="favicon" src="%ICON"></td>
 <td class="volume-info">
-	<a href="%VIEW" class="volume-title" target="_blank">%TITLE</a>
+	<a href="%VIEW" class="item-title" target="_blank">%TITLE</a>
 	<span class="volume-desc">%DESCRIPTION</span>
 </td>
 <td class="volume-search vcenter">
