--- a/resources/html/search.html
+++ b/resources/html/search.html
@@ -1,13 +1,29 @@
 <html>
 <head>
-<title>Search Results</title>
+<title>%TITLE: %QUERY</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/rsrc/css/style.css">
+<script src="/rsrc/js/jquery-2.1.4.min.js"></script>
+<script src="/rsrc/js/search.js"></script>
 </head>
 <body>
 <main class="normal">
-<h1>Search Results</h1>
+<h1>Search Results for "%QUERY" in %TITLE</h1>
+<form class="search" data-volid="%ID">
+<input class="search-input" type="search" placeholder="Search again">
+<button type="submit" >Go</button>
+</form>
+<table>
 %
+<tr>
+<td class="search-percent">%MATCH%</td>
+<td>
+	<a href="%URL" class="item-title">%TITLE</a>
+	<p class="search-preview">%PREVIEW</p>
+</td>
+</tr>
+%
+</table>
 </main>
 </body>
 </html>
