--- a/resources/html/view.html
+++ b/resources/html/view.html
@@ -12,6 +12,7 @@
 	<a href="%HOME" class="toolbar-button" target="_top"><img src="/rsrc/icon/home.svg" alt="Home"></a>
 	<a href="/" class="toolbar-button" target="_top"><img src="/rsrc/icon/library.svg" alt="Library"></a>
 	<a href="%CONTENT" class="toolbar-button" target="_top"><img src="/rsrc/icon/removebar.svg" alt="Remove toolbar"></a>
+	<a href="%LIVE" class="toolbar-button" target="_top"><img src="/rsrc/icon/popout.svg" alt="Live page"></a>
 	<!--<a href="%PREFS" class="toolbar-button" target="_top"><img src="/rsrc/icon/prefs.svg" alt="Preferences"></a>-->
 </div><div id="toolbar-right">
 	<form id="search">
