Rewrite ZSR library and zsrsrv in C++

--- a/resources/html/error.html
+++ b/resources/html/error.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<title>%(message)s</title>
+<title>%HEADER</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/rsrc/css/style.css">
 </head>
 <body>
 <main class="narrow">
-<h1>%(code)d: %(message)s</h1>
+<h1>%HEADER</h1>
 %MESSAGE.
 </main>
 </body>
