--- a/resources/html/search.html
+++ b/resources/html/search.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <main class="normal">
-<h1>Search Results for "%QUERY" in %TITLE</h1>
+<h1>Search Results for “%QUERY” in %TITLE</h1>
 <form class="search" data-volid="%ID">
 <input class="search-input" type="search" placeholder="Search again">
 <button type="submit" >Go</button>
@@ -16,7 +16,7 @@
 <table>
 %
 <tr>
-<td class="search-percent">%MATCH%</td>
+<td class="search-percent">%MATCH%%</td>
 <td>
 	<a href="%URL" class="item-title">%TITLE</a>
 	<p class="search-preview">%PREVIEW</p>
