Numerous small bug fixes; fixed http.cpp to work with latest version of Mongoose

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -13,6 +13,7 @@
 	<a href="/action/refresh"><img src="/rsrc/icon/refresh.svg" alt="Refresh volumes"></a>
 	<a href="/add"><img src="/rsrc/icon/add.svg" alt="Add Volume"></a>
 	<a href="/pref"><img src="/rsrc/icon/prefs.svg" alt="Preferences"></a>
+	<a href="/action/quit" id="quit"><img src="/rsrc/icon/quit.svg" alt="Stop server"></a>
 </div>
 <h1>Library</h1>
 <table id="volume-list">
