--- a/resources/html/view.html
+++ b/resources/html/view.html
@@ -11,17 +11,18 @@
 </head>
 <body data-volid="%ID" style="margin: 0px;">
 <div id="topbar"><div id="toolbar"><div id="toolbar-inner"><div id="toolbar-left">
-	<a href="%HOME" class="toolbar-button" target="_top"><img src="/rsrc/icon/home.svg" alt="Home"></a>
+	<a href="/view/%ID/%HOME" class="toolbar-button" target="_top"><img src="/rsrc/icon/home.svg" alt="Home"></a>
 	<a href="/" class="toolbar-button" target="_top"><img src="/rsrc/icon/library.svg" alt="Library"></a>
-	<a href="%CONTENT" class="toolbar-button" target="_top"><img src="/rsrc/icon/removebar.svg" alt="Remove toolbar"></a>
+	<a href="/content/%ID/%MEMBER" class="toolbar-button" target="_top"><img src="/rsrc/icon/removebar.svg" alt="Remove toolbar"></a>
 	<a href="%LIVE" class="toolbar-button" target="_top"><img src="/rsrc/icon/popout.svg" alt="Live page"></a>
-	<!--<a href="%PREFS" class="toolbar-button" target="_top"><img src="/rsrc/icon/prefs.svg" alt="Preferences"></a>-->
+	<a href="/shuffle/%ID" class="toolbar-button" target="_top"><img src="/rsrc/icon/shuffle.svg" alt="Shuffle"></a>
+	<!--<a href=/pref/%ID"" class="toolbar-button" target="_top"><img src="/rsrc/icon/prefs.svg" alt="Preferences"></a>-->
 </div><div id="toolbar-right">
 	<form id="search">
 	<input id="search-input" type="search" placeholder="Search" autocomplete="off" spellcheck="false">
 	<button type="submit">Go</button>
 	</form>
 </div></div></div></div>
-<iframe id="page" name="page" src="%CONTENT"></iframe>
+<iframe id="page" name="page" src="/content/%ID/%MEMBER"></iframe>
 </body>
 </html>
