--- a/resources/html/view.html
+++ b/resources/html/view.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>%TITLE</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/rsrc/css/style.css">
 <link rel="icon" href="%ICON">
+<style>
+html { height: 100%; }
+</style>
 <script src="/rsrc/js/jquery-2.1.4.min.js"></script>
 <script src="/rsrc/js/typeahead.bundle.js"></script>
 <script src="/rsrc/js/complete.js"></script>
@@ -16,7 +20,7 @@
 	<a href="/content/%ID/%MEMBER" class="toolbar-button" target="_top"><img src="/rsrc/icon/removebar.svg" alt="Remove toolbar"></a>
 	<a href="%LIVE" class="toolbar-button" target="_top"><img src="/rsrc/icon/popout.svg" alt="Live page"></a>
 	<a href="/shuffle/%ID" class="toolbar-button" target="_top"><img src="/rsrc/icon/shuffle.svg" alt="Shuffle"></a>
-	<!--<a href=/pref/%ID"" class="toolbar-button" target="_top"><img src="/rsrc/icon/prefs.svg" alt="Preferences"></a>-->
+	<!--<a href="/pref/%ID" class="toolbar-button" target="_top"><img src="/rsrc/icon/prefs.svg" alt="Preferences"></a>-->
 </div><div id="toolbar-right">
 	<form id="search">
 	<input id="search-input" type="search" placeholder="Search" autocomplete="off" spellcheck="false">
