Several small bug fixes and improvements; quicksearch implementation

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -21,10 +21,10 @@
 <h1>Library</h1>
 %
 <div class="category-container unloaded">
-<a href="/load/%ID" class="category-title" data-catname="%ID">%NAME</a>
+<a href="/load/%ID" class="category-title" data-catname="%ID">%NAME <img class="category-loading" src="/rsrc/icon/loading.gif"></a>
 %
 <div class="category-container loaded">
-<a href="/unload/%ID" class="category-title" data-catname="%ID">%NAME</a>
+<a href="/unload/%ID" class="category-title" data-catname="%ID">%NAME<img class="category-loading" src="/rsrc/icon/loading.gif"></a>
 %
 <table class="volume-list">
 %
