--- a/resources/html/pref.html
+++ b/resources/html/pref.html
@@ -4,11 +4,12 @@
 <title>%TITLE Preferences</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/rsrc/css/style.css">
+<link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
 </head>
 <body>
 <main class="normal">
 <div id="utils">
-	<a href="%VIEW"><img src="/rsrc/icon/back.svg" alt="Back"></a>
+	<a href="%VIEW"><i class="fa fa-2x fa-arrow-left"></i></a>
 </div>
 <h1>%TITLE Preferences</h1>
 %
