--- a/resources/html/add.html
+++ b/resources/html/add.html
@@ -4,13 +4,14 @@
 <title>Add Volume</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/rsrc/css/style.css">
+<link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
 <script src="/rsrc/js/jquery-2.1.4.min.js"></script>
 <script src="/rsrc/js/add.js"></script>
 </head>
 <body>
 <main class="normal">
 <div id="utils">
-	<a href="/"><img src="/rsrc/icon/back.svg" alt="Back"></a>
+	<a href="/"><i class="fa fa-2x fa-arrow-left"></i></a>
 </div>
 <h1>Add Volume</h1>
 <div>
