--- a/resources/html/mainpref.html
+++ b/resources/html/mainpref.html
@@ -4,11 +4,12 @@
 <title>Preferences</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/rsrc/css/style.css">
+<link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
 </head>
 <body>
 <main class="normal">
 <div id="utils">
-	<a href="/"><img src="/rsrc/icon/back.svg" alt="Back"></a>
+	<a href="/"><i class="fa fa-2x fa-arrow-left"></i></a>
 </div>
 <h1>Server Preferences</h1>
 <form method="get" action="/action/pref">
