--- a/resources/html/view.html
+++ b/resources/html/view.html
@@ -4,6 +4,7 @@
 <title>%TITLE</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/rsrc/css/style.css">
+<link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
 <link rel="icon" href="%ICON">
 <style>
 html { height: 100%; }
@@ -15,12 +16,12 @@ html { height: 100%; }
 </head>
 <body data-volid="%ID" style="margin: 0px;">
 <div id="topbar"><div id="toolbar"><div id="toolbar-inner"><div id="toolbar-left">
-	<a href="/view/%ID/%HOME" class="toolbar-button" target="_top"><img src="/rsrc/icon/home.svg" alt="Home"></a>
-	<a href="/" class="toolbar-button" target="_top"><img src="/rsrc/icon/library.svg" alt="Library"></a>
-	<a href="/content/%ID/%MEMBER" class="toolbar-button" target="_top"><img src="/rsrc/icon/removebar.svg" alt="Remove toolbar"></a>
-	<a href="%LIVE" class="toolbar-button" target="_top"><img src="/rsrc/icon/popout.svg" alt="Live page"></a>
-	<a href="/shuffle/%ID" class="toolbar-button" target="_top"><img src="/rsrc/icon/shuffle.svg" alt="Shuffle"></a>
-	<!--<a href="/pref/%ID" class="toolbar-button" target="_top"><img src="/rsrc/icon/prefs.svg" alt="Preferences"></a>-->
+	<a href="/view/%ID/%HOME" class="toolbar-button" target="_top"><i class="fa fa-lg fa-home" title="Home page"></i></a>
+	<a href="/" class="toolbar-button" target="_top"><i class="fa fa-lg fa-th-list" title="Library"></i></a>
+	<a href="/content/%ID/%MEMBER" class="toolbar-button" target="_top"><i class="fa fa-lg fa-toggle-up" title="Remove toolbar"></i></a>
+	<a href="%LIVE" class="toolbar-button" target="_top"><i class="fa fa-lg fa-external-link" title="Original page"></i></a>
+	<a href="/shuffle/%ID" class="toolbar-button" target="_top"><i class="fa fa-lg fa-random" title="Random page"></i></a>
+	<!--<a href="/pref/%ID" class="toolbar-button" target="_top"><i class="fa fa-lg fa-gear"></i></a>-->
 </div><div id="toolbar-right">
 	<form id="search">
 	<input id="search-input" type="search" placeholder="Search" autocomplete="off" spellcheck="false">
