--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -14,10 +14,10 @@
 <body>
 <main class="normal">
 <div id="utils">
-	<a href="/action/refresh"><i class="fa fa-2x fa-refresh"></i></a>
-	<a href="/add"><i class="fa fa-2x fa-plus"></i></a>
-	<a href="/pref"><i class="fa fa-2x fa-gear"></i></a>
-	<a href="/action/quit" id="quit"><i class="fa fa-2x fa-power-off"></i></a>
+%?PRIV 	<a href="/action/refresh"><i class="fa fa-2x fa-refresh"></i></a>
+%?PRIV 	<a href="/add"><i class="fa fa-2x fa-plus"></i></a>
+%?PRIV 	<a href="/pref"><i class="fa fa-2x fa-gear"></i></a>
+%?PRIV 	<a href="/action/quit" id="quit"><i class="fa fa-2x fa-power-off"></i></a>
 </div>
 <h1>Library</h1>
 %
