--- a/resources/html/pref.html
+++ b/resources/html/pref.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>%TITLE Preferences</title>
+<title>Preferences</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/rsrc/css/style.css">
 <link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
@@ -9,11 +9,20 @@
 <body>
 <main class="normal">
 <div id="utils">
-	<a href="%VIEW"><i class="fa fa-2x fa-arrow-left"></i></a>
+	<a href="/"><i class="fa fa-2x fa-arrow-left"></i></a>
 </div>
-<h1>%TITLE Preferences</h1>
+<h1>Server Preferences</h1>
+<form method="get" action="/action/pref">
+<table>
 %
+<tr><td><span class="form-key">%NAME</span></td><td><input type="text" name="%KEY" value="%VALUE" class="form-value"></td></tr>
 %
+</table>
+<div class="form-sub">
+	<span class="submit-explain">Most changes will not take effect until the application is restarted.</span>
+	<span class="form-ops"><button type="submit">Submit</button></span>
+</div>
+</form>
 </main>
 </body>
 </html>
