--- a/resources/html/search.html
+++ b/resources/html/search.html
@@ -4,6 +4,7 @@
 <title>%TITLE: %QUERY</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/rsrc/css/style.css">
+<link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
 <script src="/rsrc/js/jquery-2.1.4.min.js"></script>
 <script src="/rsrc/js/typeahead.bundle.js"></script>
 <script src="/rsrc/js/complete.js"></script>
@@ -11,6 +12,10 @@
 </head>
 <body>
 <main class="normal">
+<div id="utils">
+	<a href="/"><i class="fa fa-2x fa-th-list" title="Library"></i></a>
+	<a href="/view/%ID/%HOME"><i class="fa fa-2x fa-home" title="Home page"></i></a>
+</div>
 <h1>Search Results for “%QUERY” in %TITLE</h1>
 <form id="search" data-volid="%ID">
 <input id="search-input" type="search" placeholder="Search again" autocomplete="off" spellcheck="false">
