--- a/resources/html/titles.html
+++ b/resources/html/titles.html
@@ -4,11 +4,16 @@
 <title>%TITLE</title>
 <meta charset="UTF-8" />
 <link rel="stylesheet" href="/rsrc/css/style.css">
+<link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
 <link rel="icon" href="/rsrc/img/favicon.png" sizes="16x16" type="image/png">
 <script src="/rsrc/js/jquery-2.1.4.min.js"></script>
 </head>
 <body>
 <main class="normal">
+<div id="utils">
+	<a href="/"><i class="fa fa-2x fa-th-list" title="Library"></i></a>
+	<a href="/view/%ID/%HOME"><i class="fa fa-2x fa-home" title="Home page"></i></a>
+</div>
 <h1>Pages for “%QUERY” in %TITLE</h1>
 <table>
 %
