Reimplemented Xapian support, disabled by default due to prohibitive size

--- a/resources/html/search.html
+++ b/resources/html/search.html
@@ -21,7 +21,7 @@
 <input id="search-input" type="search" placeholder="Search again" autocomplete="off" spellcheck="false">
 <button type="submit">Go</button>
 </form>
-<table>
+<table id="search-results">
 %
 <tr>
 <td class="search-percent">%MATCH%%</td>
