Fixes to Wimiedia CSS and symlink support; added iterator for node children

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -22,10 +22,10 @@
 <h1>Library</h1>
 %
 <div class="category-container unloaded">
-<a href="/load/%ID" class="category-title" data-catname="%ID">%NAME <img class="category-loading" src="/rsrc/img/loading.gif"></a>
+<a href="/load/%ID" class="category-title" data-catname="%ID">%NAME <i class="category-loading fa fa-pulse fa-spinner"></i></a>
 %
 <div class="category-container loaded">
-<a href="/unload/%ID" class="category-title" data-catname="%ID">%NAME<img class="category-loading" src="/rsrc/img/loading.gif"></a>
+<a href="/unload/%ID" class="category-title" data-catname="%ID">%NAME<i class="category-loading fa fa-pulse fa-spinner"></i></a>
 %
 <table class="volume-list">
 %
