Removed semicolons from Python scripts; moved inline sources to sepearate files; switched to new template engine

--- a/resources/html/error.html
+++ b/resources/html/error.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>%HEADER</title>
+<title>{{header}}</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/rsrc/css/style.css">
 </head>
 <body>
 <main class="narrow">
-<h1>%HEADER</h1>
-%MESSAGE.
+<h1>{{header}}</h1>
+{{message.
 </main>
 </body>
 </html>
+
