--- a/resources/html/titles.html
+++ b/resources/html/titles.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>%TITLE</title>
+<title>{{title}}</title>
 <meta charset="UTF-8" />
 <link rel="stylesheet" href="/rsrc/css/style.css">
 <link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
@@ -12,14 +12,14 @@
 <main class="normal">
 <div id="utils">
 	<a href="/"><i class="fa fa-2x fa-th-list" title="Library"></i></a>
-	<a href="/view/%ID/%HOME"><i class="fa fa-2x fa-home" title="Home page"></i></a>
+	<a href="/view/{{id}}/{{home}}"><i class="fa fa-2x fa-home" title="Home page"></i></a>
 </div>
-<h1>Pages for “%QUERY” in %TITLE</h1>
+<h1>Pages for “{{query}}” in {{title}}</h1>
 <table>
 %
 <tr>
 <td>
-	<a href="%URL">%TITLE</a>
+	<a href="{{url}}">{{title}}</a>
 </td>
 </tr>
 %
