Fixed compile issues on pristine source trees; changed CSS again; tweaked readme

--- a/resources/html/view.html
+++ b/resources/html/view.html
@@ -21,6 +21,7 @@ html { height: 100%; }
 	<a href="/view/{{id}}/{{home}}" class="toolbar-button" target="_top"><i class="fa fa-lg fa-home" title="Home page"></i></a>
 	<a href="{{live}}" class="toolbar-button" target="_top"><i class="fa fa-lg fa-external-link" title="Original page"></i></a>
 	<a href="/shuffle/{{id}}" class="toolbar-button" target="_top"><i class="fa fa-lg fa-random" title="Random page"></i></a>
+	<div class="toolbar-spacer"></div>
 	<div class="toolbar-expand"></div>
 	<form id="search">
 	<input id="search-input" type="search" placeholder="Search" autocomplete="off" spellcheck="false">
