--- a/resources/html/titles.html
+++ b/resources/html/titles.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
 <link rel="icon" href="/rsrc/img/favicon.png" sizes="16x16" type="image/png">
 <script src="/rsrc/js/jquery-2.1.4.min.js"></script>
+<script src="/rsrc/js/typeahead.bundle.js"></script>
+<script src="/rsrc/js/complete.js"></script>
+<script src="/rsrc/js/titles.js"></script>
 </head>
 <body>
 <main class="normal">
@@ -15,7 +18,11 @@
 	<a href="/view/{{id}}/{{home}}"><i class="fa fa-2x fa-home" title="Home page"></i></a>
 </div>
 <h1>Pages for “{{query}}” in {{title}}</h1>
-<table>
+<form id="search" data-volid="{{id}}">
+<input id="search-input" type="search" placeholder="Search again" autocomplete="off" spellcheck="false">
+<button type="submit">Go</button>
+</form>
+<table id="search-results">
 %
 <tr>
 <td>
