Toolbar added via HTML injection rather than iframe

--- a/resources/html/search.html
+++ b/resources/html/search.html
@@ -4,11 +4,12 @@
 <title>{{title}}: {{query}}</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/rsrc/css/style.css">
+<link rel="stylesheet" href="/rsrc/css/typeahead.css">
 <link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
 <script src="/rsrc/js/jquery-2.1.4.min.js"></script>
 <script src="/rsrc/js/typeahead.bundle.js"></script>
 <script src="/rsrc/js/complete.js"></script>
-<script src="/rsrc/js/search.js"></script>
+<script>$(document).ready(function() { search_setup("search", "#search-input", "#search"); });</script>
 </head>
 <body>
 <main class="normal">
