--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -4,6 +4,7 @@
 <title>Library</title>
 <meta charset="UTF-8" />
 <link rel="stylesheet" href="/rsrc/css/style.css">
+<link rel="stylesheet" href="/rsrc/css/typeahead.css">
 <link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
 <link rel="icon" href="/rsrc/img/favicon.png" sizes="16x16" type="image/png">
 <script src="/rsrc/js/jquery-2.1.4.min.js"></script>
