Added toolbar CSS scoping and mmap-optimized LZMA decompressor

--- a/resources/html/toolbar.html
+++ b/resources/html/toolbar.html
@@ -5,7 +5,7 @@
 <script src="/rsrc/js/typeahead.bundle.js"></script>
 <script src="/rsrc/js/complete.js"></script>
 <script>$(document).ready(function() { search_setup("search", "#zsr-search-input", "#zsr-search"); });</script>
-<div id="zsr-topbar"><div id="zsr-toolbar">
+<div id="zsr-toolbar">
 	<div class="zsr-toolbar-spacer"></div>
 	<a href="/" class="zsr-toolbar-button" target="_top"><i class="fa fa-lg fa-th-list" title="Library"></i></a>
 	<a href="/view/{{id}}/{{home}}" class="zsr-toolbar-button" target="_top"><i class="fa fa-lg fa-home" title="Home page"></i></a>
@@ -19,4 +19,4 @@
 	</form>
 	<div class="zsr-toolbar-spacer"></div>
 	<a href="/content/{{id}}/{{member}}" class="zsr-close-button" target="_top"><img src="/rsrc/img/x.svg"></a>
-</div></div>
+</div>
