--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -32,7 +32,7 @@
 <tr>
 <td class="volume-icon"><img class="favicon" src="{{icon}}"></td>
 <td class="volume-info">
-	<a href="/view/{{id}}/{{home}}" class="item-title" target="_blank">{{title}}</a>
+	<a href="{{viewbase}}/{{id}}/{{home}}" class="item-title" target="_blank">{{title}}</a>
 	<span class="volume-desc">{{description}}</span>
 </td>
 <td class="volume-search vcenter">
