--- a/resources/html/search.html
+++ b/resources/html/search.html
@@ -15,7 +15,7 @@
 <main class="normal">
 <div id="utils">
 	<a href="/"><i class="fa fa-2x fa-th-list" title="Library"></i></a>
-	<a href="/view/{{id}}/{{home}}"><i class="fa fa-2x fa-home" title="Home page"></i></a>
+	<a href="{{viewbase}}/{{id}}/{{home}}"><i class="fa fa-2x fa-home" title="Home page"></i></a>
 </div>
 <h1>Search Results for “{{query}}” in {{title}}</h1>
 <form id="search" data-volid="{{id}}">
@@ -27,7 +27,7 @@
 <tr>
 <td class="search-percent">{{match}}%</td>
 <td>
-	<a href="%URL" class="item-title">{{title}}</a>
+	<a href="{{viewbase}}/{{id}}/{{member}}" class="item-title">{{title}}</a>
 	<p class="search-preview">{{preview}}</p>
 </td>
 </tr>
