--- a/resources/html/titles.html
+++ b/resources/html/titles.html
@@ -16,7 +16,7 @@
 <main class="normal">
 <div id="utils">
 	<a href="/"><i class="fa fa-2x fa-th-list" title="Library"></i></a>
-	<a href="/view/{{id}}/{{home}}"><i class="fa fa-2x fa-home" title="Home page"></i></a>
+	<a href="{{viewbase}}/{{id}}/{{home}}"><i class="fa fa-2x fa-home" title="Home page"></i></a>
 </div>
 <h1>Pages for “{{query}}” in {{title}}</h1>
 <form id="search" data-volid="{{id}}">
