Preserve location.hash when removing the toolbar

--- a/resources/html/view.html
+++ b/resources/html/view.html
@@ -29,7 +29,7 @@ html { height: 100%; }
 	<button type="submit">Go</button>
 	</form>
 	<div class="toolbar-spacer"></div>
-	<a href="/content/{{id}}/{{member}}{{query}}" class="close-button" target="_top"><img src="/rsrc/img/x.svg"></a>
+	<a href="/content/{{id}}/{{member}}{{query}}" id="close-button" target="_top"><img src="/rsrc/img/x.svg"></a>
 </div></div>
 <iframe id="page" name="page" src="/content/{{id}}/{{member}}{{query}}"></iframe>
 </body>
