Cleanup from switch to libonion -- primarily, convert several HTTP endpoints to use query parameters

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -25,7 +25,7 @@
 <h1>Library</h1>
 %
 <div class="category-container {{loaded?loaded:unloaded}}">
-<a href="/{{loaded?unload:load}}/{{id}}" class="category-title" data-catname="{{id}}">{{name}} <i class="category-loading fa fa-pulse fa-spinner"></i></a>
+<a href="/{{loaded?unload:load}}?cat={{id}}" class="category-title" data-catname="{{id}}">{{name}} <i class="category-loading fa fa-pulse fa-spinner"></i></a>
 %
 <table class="volume-list">
 %
