--- a/resources/html/titles.html
+++ b/resources/html/titles.html
@@ -35,13 +35,13 @@
 {{#pages>1?}}
 	<div id="pager">
 	{{#page>1?}}
-		<div class="item"><a style="" href="/titles/{{id}}/{{queryesc}}/1">«</a></div>
-		<div class="item"><a style="" href="/titles/{{id}}/{{queryesc}}/{{page-1}}">‹</a></div>
+		<div class="item"><a style="" href="/titles/{{id}}?q={{queryesc}}&page=1">«</a></div>
+		<div class="item"><a style="" href="/titles/{{id}}?q={{queryesc}}&page={{page-1}}">‹</a></div>
 	{{/}}
 	<div class="item">{{page}} / {{pages}}</div>
 	{{#page<pages?}}
-		<div class="item"><a style="" href="/titles/{{id}}/{{queryesc}}/{{page+1}}">›</a></div>
-		<div class="item"><a style="" href="/titles/{{id}}/{{queryesc}}/{{pages}}">»</a></div>
+		<div class="item"><a style="" href="/titles/{{id}}?q={{queryesc}}&page={{page+1}}">›</a></div>
+		<div class="item"><a style="" href="/titles/{{id}}?q={{queryesc}}&page={{pages}}">»</a></div>
 	{{/}}
 	</div>
 {{/}}
