Implement most remaining features in Rust version

--- a/sqsrv/resources/html/home.html
+++ b/sqsrv/resources/html/home.html
@@ -16,7 +16,7 @@
 <main class="normal">
 <div id="utils">
 	{% if priv %}
-	<a href="/action/refresh"><i class="fa fa-2x fa-refresh"></i></a>
+	<a href="/action/refresh"><i class="fa fa-2x fa-sync"></i></a>
 	<a href="/action/quit" id="quit"><i class="fa fa-2x fa-power-off"></i></a>
 	{% endif %}
 </div>
@@ -27,21 +27,8 @@
 <a href="/{% if category.loaded %}unload{% else %}load{% endif %}?cat={{ category.id | url_encode }}" class="category-title" data-catname="{{ category.id | escape }}">{{ category.name | escape }} <i class="category-loading fa fa-pulse fa-spinner"></i></a>
 {% endif %}
 <table class="volume-list">
-{% for volume in category.volumes %}
-<tr>
-<td class="volume-icon"><img class="favicon" src="{{ volume.favicon }}"></td>
-<td class="volume-info">
-	<a href="{{ viewbase }}/{{ volume.id | url_encode }}" class="item-title" target="_blank">{{ volume.title | escape }}</a>
-	{% if volume.description %}<span class="volume-desc">{{ volume.description | escape }}</span>{% endif %}
-</td>
-<td class="volume-search vcenter">
-	<form class="search" data-volid="{{ volume.id | escape }}">
-	<input class="search-input typeahead" type="search" placeholder="Search" autocomplete="off" spellcheck="false">
-	<button type="submit" >Go</button>
-	</form>
-</td>
-</tr>
-{% endfor %}
+{% assign volumes = category.volumes %}
+{% include "volume-rows" %}
 </table>
 </div>
 {% endfor %}
