--- a/sqsrv/resources/html/index.html
+++ b/sqsrv/resources/html/index.html
@@ -4,7 +4,8 @@
 <title>Index of /{{ path }}</title>
 <meta charset="UTF-8" />
 <link rel="stylesheet" href="/rsrc/css/style.css">
-<link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
+<link rel="stylesheet" href="/rsrc/css/fontawesome.css">
+<link rel="stylesheet" href="/rsrc/css/fontawesome-solid.css">
 <link rel="icon" href="/rsrc/img/favicon.png" sizes="16x16" type="image/png">
 </head>
 <body>
