--- a/sqsrv/resources/html/view.html
+++ b/sqsrv/resources/html/view.html
@@ -5,7 +5,8 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/rsrc/css/style.css">
 <link rel="stylesheet" href="/rsrc/css/typeahead.css">
-<link rel="stylesheet" href="/rsrc/css/font-awesome.min.css">
+<link rel="stylesheet" href="/rsrc/css/fontawesome.css">
+<link rel="stylesheet" href="/rsrc/css/fontawesome-solid.css">
 {% if volume.icon %}
 	<link rel="icon" href="/content/{{ volume.id }}/{{ volume.icon }}">
 {% endif %}
